--- a/Index.html
+++ b/Index.html
@@ -144,11 +144,11 @@
     <div class="dashboard">
 
         <div class="card" style="grid-column: span 1; border: 2px solid var(--primary-color);">
-            <h3>📵 Mobile Fasting Timer</h3>
-            <p>Time spent disconnected:</p>
-            <div id="timerDisplay" class="timer-display">00:00:00</div>
-            <button onclick="startDetox()">Start Fast</button>
-            <button onclick="stopDetox()" class="reset">I slipped up</button>
+            <h3>📵 Digital Detox Tracker</h3>
+            <p>Time Reclaimed:</p>
+            <div id="timerDisplay" class="timer-display">00h:00m:00s</div>
+            <button onclick="startDetox()">Start Detox</button>
+            <button onclick="stopDetox()" class="reset">End Detox</button>
         </div>
 
         <div class="card">
