--- a/Index.html
+++ b/Index.html
@@ -241,8 +241,8 @@
             <p>Instant Rain</p>
             <audio controls loop style="width: 100%; max-width: 200px;">
                 <source src="https:// cdn.pixabay.com/download/audio/2022/02/07/audio_6590b007779.mp3" type="audio/mpeg">
-            </audio> your browser does not support audio
-        </div>
+            </audio> 
+        <
 
     </div>
 
